--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @use 'functions';
+@use '@unsass/breakpoint';
 @import '@fontsource/metropolis';
 @import '@fontsource/metropolis/300';
 @import '@fontsource/metropolis/500';
@@ -25,14 +26,23 @@
 }
 
 body {
-    font-family: "Metropolis", sans-serif;
-    background-color: var(--bg-color);
-    color: var(--text-color);
+	font-family: 'Metropolis', sans-serif;
+	background-color: var(--bg-color);
+	color: var(--text-color);
 }
 
 ::selection {
-    background-color: var(--accent-color);
-    color: var(--text-color);
+	background-color: var(--accent-color);
+	color: var(--text-color);
+}
+
+input {
+	border: none;
+	padding: 0 20px;
+	height: 35px;
+	border-radius: 20px;
+	font-size: functions.toRem(14);
+	color: var(--medium-gray);
 }
 
 h1,
@@ -92,6 +102,8 @@ a {
 	clip: rect(0 0 0 0);
 	clip-path: inset(100%);
 	height: 1px;
+	overflow: hidden;
+	position: absolute;
 	white-space: nowrap;
 	width: 1px;
 }
@@ -110,4 +122,31 @@ a {
 
 #nprogress .bar {
 	background: var(--accent-color) !important;
+}
+
+.grid-items {
+	display: grid;
+	grid-template-columns: 1fr;
+	gap: 20px;
+	.card {
+		height: 100%;
+	}
+	@include breakpoint.up('sm') {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+	@include breakpoint.up('md') {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+	@include breakpoint.up('xl') {
+		grid-template-columns: repeat(6, minmax(0, 1fr));
+	}
+}
+
+@for $i from 1 through 3 {
+	.truncate-#{$i} {
+		display: -webkit-box;
+		-webkit-line-clamp: $i;
+		-webkit-box-orient: vertical;
+		overflow: hidden;
+	}
 }
